--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5",
     "playwright": "^1.47.1",
     "ts-node": "^10.9.2",
