--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
     "test": "ts-node ./node_modules/.bin/playwright test"
   },
   "keywords": [],
@@ -11,6 +13,13 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.47.1",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "allure-commandline": "2.29.0",
+    "allure-playwright": "^3.0.0-beta.6",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "@types/node": "^22.5.5",
     "playwright": "^1.47.1",
     "ts-node": "^10.9.2",
